<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".HomeFragment">


    <Button
        android:id="@+id/button_check_car"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:layout_marginStart="136dp"
        android:backgroundTint="#2079C1"
        android:layout_marginTop="36dp"
        android:text="@string/check_car_button_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_car" />

    <Button
        android:id="@+id/button_add_car"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:layout_marginBottom="284dp"
        android:text="@string/add_car_button_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#2079C1"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.54" />


    <TextView
        android:id="@+id/home_title"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_view_title"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="353dp"
        android:layout_height="188dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/car_image"
        android:src="@drawable/car1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title" />


</androidx.constraintlayout.widget.ConstraintLayout>